Revise RewardService tests and reward calculation rules
Updated RewardService test data to simulate more precise transaction scenarios for each customer. This better reflects the operation of the transaction system. In addition, the calculation rule for reward points is slightly adjusted: Points are now granted from a purchase of 50 and over, instead of strictly over 50. This follows changes in the business rules for granting reward points.